--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -40,7 +40,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Run MLB Bot Script
-        run: Rscript post_daily.R
+        run: Rscript R/script.r
         env:
           apikey: ${{ secrets.apikey }}
           apikeysecret: ${{ secrets.apikeysecret }}
