--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -29,7 +29,6 @@ jobs:
         run: |
           install.packages(c(
             "dplyr",
-            "baseballr",
             "tidyverse",
             "ggplot2",
             "httr",
@@ -37,6 +36,10 @@ jobs:
             "readr",
             "stringr"
           ), repos = "https://cloud.r-project.org")
+          if (!requireNamespace("remotes", quietly = TRUE)) {
+            install.packages("remotes", repos = "https://cloud.r-project.org")
+          }
+          remotes::install_github("BillPetti/baseballr")
         shell: Rscript {0}
 
       - name: Run MLB Bot Script
