--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Install pak (R package manager)
+        run: |
+          Rscript -e 'install.packages("pak", repos = "https://cran.rstudio.com")'
+
       - name: Cache R packages
         uses: actions/cache@v3
         with:
@@ -24,22 +28,29 @@ jobs:
           key: ${{ runner.os }}-r-${{ hashFiles('**/*.R') }}
           restore-keys: |
             ${{ runner.os }}-r-
+            
       - name: Install system dependencies
         run: |
-            sudo apt-get update
-            sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev \
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev \
             libfontconfig1-dev libfreetype6-dev
-      - name: Install required packages
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-         packages: |
-            dplyr
-            baseballr
-            ggplot2
-            httr
-            jsonlite
-            readr
-            stringr
+
+      - name: Write dependencies.lock (auto-lock resolution)
+        run: |
+          Rscript -e '
+          pkgs <- c("dplyr", "ggplot2", "httr", "jsonlite", "readr", "stringr")
+          # baseballr is installed from GitHub if not found on CRAN
+          if (!requireNamespace("baseballr", quietly = TRUE)) {
+            pak::pak("BillPetti/baseballr")
+          } else {
+            pkgs <- c(pkgs, "baseballr")
+          }
+          pak::lockfile_create(pkgs, lockfile = ".github/pkg.lock")
+          '
+
+      - name: Install R package dependencies from lockfile
+        run: |
+          Rscript -e 'pak::pkg_install(lockfile = ".github/pkg.lock")'
 
       - name: Run MLB Bot Script
         run: Rscript R/script.r
