--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -14,10 +14,13 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
+
       - name: Install R Packages
         run: |
           Rscript -e 'install.packages(c("dplyr", "ggplot2", "httr", "jsonlite", "readr", "stringr"), repos="https://cran.rstudio.com")'
-          Rscript -e 'pak::pak("BillPetti/baseballr")'
+          Rscript -e 'if (!requireNamespace("pak", quietly = TRUE)) install.packages("pak", repos="https://cran.rstudio.com"); pak::pak("BillPetti/baseballr")'
 
       - name: Run MLB Script
         run: Rscript R/script.r
