--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -15,16 +15,13 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
+        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev libfontconfig1-dev libfreetype6-dev
 
       - name: Install R Packages
         run: |
-          Rscript -e 'install.packages(c("dplyr", "ggplot2", "httr", "jsonlite", "readr", "stringr"), repos="https://cran.rstudio.com")'
+          Rscript -e 'install.packages(c("dplyr", "ggplot2", "httr", "jsonlite", "readr", "stringr", "tidyverse"), repos="https://cran.rstudio.com")'
           Rscript -e 'if (!requireNamespace("pak", quietly = TRUE)) install.packages("pak", repos="https://cran.rstudio.com"); pak::pak("BillPetti/baseballr")'
 
-      - name: Install tidyverse
-        run: Rscript -e 'install.packages("tidyverse", repos="https://cloud.r-project.org")'
-        
       - name: Run MLB Script
         run: Rscript R/script.r
         env:
