--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -15,7 +15,7 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev libfontconfig1-dev libfreetype6-dev
+        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev libfontconfig1-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libpng-dev
 
       - name: Install R Packages
         run: |
