--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -15,7 +15,7 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev libfontconfig1-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libpng-dev
+        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev libfontconfig1-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libpng-dev libtiff5-dev libjpeg-dev libwebp-dev libwebpmux-dev libx11-dev libxext-dev libxtst-dev libxrender-dev libssl-dev libxml2-dev libgit2-dev libglpk-dev libgmp-dev libgsl-dev
 
       - name: Install R Packages
         run: |
