Add xR28 data file and update xR_matrix with new calculations
- Introduced a new CSV file `xR28.csv` containing average runs data for various base positions and outs.
- Updated `xR_matrix.csv` to include additional columns for comparison with `xR28`, including counts, differences, and new xR values.

--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -25,7 +25,7 @@ jobs:
           Rscript -e 'if (!requireNamespace("pak", quietly = TRUE)) install.packages("pak", repos="https://cran.rstudio.com"); pak::pak("BillPetti/baseballr")'
 
       - name: Run MLB Script
-        run: Rscript R/script.r
+        run: Rscript R/twitterscript.r
         env:
           apikey: ${{ secrets.apikey }}
           apikeysecret: ${{ secrets.apikeysecret }}
